[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/perks.gd" type="Script" id=1]
[ext_resource path="res://HUD/health.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/shield.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/energy.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/damage.tscn" type="PackedScene" id=5]

[node name="Perks" type="Node2D" groups=[
"HUD",
]]
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="EnergyBar" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 19.9216 )

[node name="AttackBar" parent="." instance=ExtResource( 5 )]
position = Vector2( 1.52588e-05, 40.3065 )

[node name="ShieldBar" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 60.2281 )
